<resources>
    <string name="app_name">MyDailyWay</string>
    <string name="title">MyDailyWay</string>
    <string name="action_settings">ActionSetting</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">NavigationDrawerOpen</string>
    <string name="navigation_drawer_close">NavigationDrawerClose</string>
    <string name="google_maps_api_key">AIzaSyCxPveUpfQr6cvTTdwYjbnkRyeieIJsmmY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nav_calendar">Kalender</string>
    <string name="nav_favorites">Favoriten</string>
    <string name="nav_share">Share</string>
    <string name="nav_changeProfile">Profil wechseln</string>
    <string name="nav_trackList">Tracks</string>
    <string name="nav_infos">Hilfe und Einstellungen</string>
    <string name="nav_impressum">Impressum</string>
    <string name="nav_mail">contact@mydailyway.com</string>

    <string name="gpsConfirmation_message"> GPS ist nicht aktiviert. Um alle Funktionen dieser Anwendung nutzen zu können, müssen Sie GPS aktivieren. Wollen Sie zu den Einstellungen weitergeleitet werden?</string>
    <string name="gpsConfirmation_yes">Ja</string>
    <string name="gpsConfirmation_no">Nein</string>


    <string name="welcome">This is a DialogFragment</string>
    <string name="alertdialogfragment">Open Alert Dialog Fragment</string>
    <string name="title_activity_list">Tracks</string>
    <string name="title_track_save">Speichern</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="track_name">Trackname eingeben: </string>
    <string name="duration">Dauer der Fahrt:  </string>
    <string name="date">Datum:  </string>
    <string name="lenght">Länge der Strecke:  </string>
    <string name="way_purpose">Wegezweck:  </string>
    <string name="namet">Trackname: </string>


    <string-array name="way_purpose_spinner">
        <item>Arbeit</item>
        <item>Ausbildung</item>
        <item>Einkauf</item>
        <item>Heimweg</item>
        <item>Freizeit</item>
    </string-array>

    <string name="used_traffic">Benutzte Verkehrsmittel: </string>


</resources>

